Update 'e0ahvdolr-nodejs' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1d3a1fe343.uvwm.p3.openshiftapps.com/rhtap/rhtap-qe:229f2868ad9135e2284cdbd98661c7de0b075f36@sha256:fd75434bb6c4fe37ba7197ab9a30a966b5916a131b740a2c2b9d16029d1f9a17

--- a/components/e0ahvdolr-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/e0ahvdolr-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: e0ahvdolr-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-1d3a1fe343.uvwm.p3.openshiftapps.com/rhtap/rhtap-qe:229f2868ad9135e2284cdbd98661c7de0b075f36@sha256:fd75434bb6c4fe37ba7197ab9a30a966b5916a131b740a2c2b9d16029d1f9a17
+          name: container-image
